--- a/app/views/participantes/new.html.erb
+++ b/app/views/participantes/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', participante: @participante %>
 
-<%= link_to 'Back', participantes_path %>
+<%= link_to 'Back', encontros_path %>
