--- a/app/views/encontros/show.html.erb
+++ b/app/views/encontros/show.html.erb
@@ -44,8 +44,12 @@
 	  <%= @encontro.quant_max %>
 	</p>
 	
-	<p><%= link_to 'Inscreva-se', new_participante_path(encontro_id: @encontro) , class:"btn btn-info"%> </p>
+	<p><%= link_to 'Inscreva-se', new_participante_path(encontro_id: @encontro) , class:"btn btn-info"%> 
+		<%= link_to 'Editar', edit_encontro_path(@encontro) , class:"btn btn-primary"%> 
+		<%= link_to 'Voltar', encontros_path , class:"btn btn-default"%>
+	</p>
 	</div>
+
 
 	<div class="">
 		<table class="table table-hover">
@@ -72,5 +76,4 @@
 
 </div>
 
-<%= link_to 'Editar', edit_encontro_path(@encontro) , class:"btn btn-info"%> 
-<%= link_to 'Voltar', encontros_path , class:"btn btn-default"%>
+
