--- a/app/views/participantes/edit.html.erb
+++ b/app/views/participantes/edit.html.erb
@@ -1,24 +1,22 @@
 <h1>Atualizar o Valor</h1>
 <%= form_for(@participante) do |f| %>
 
-  <div class="">
-    <%= @participante.usuario.nome%>
-  </div>
+	<form class="col-md-3">
 
-  <div class="field">
-    <%= f.label :valor_pago, 'Valor' %>
-    <%= f.text_field :valor_pago %>
-  </div>
+	  <div class="field form-group col-md-3">
+	    <%= @participante.usuario.nome%>
+	    <%= f.label :valor_pago, 'Valor' %>
+	    <%= f.text_field :valor_pago, class:"form-control" %>
+	    <%= f.label :tipo_pagamento, 'Forma de Pagamento' %>
+	    <%= f.select :tipo_pagamento, Participante.tipo_pagamento.options, class:""%>
+	  </div>
 
-  <div class="field">
-    <%= f.label :tipo_pagamento, 'Forma de Pagamento' %>
-    <%= f.select :tipo_pagamento, Participante.tipo_pagamento.options %>
-  </div>
+	  <div class="actions">
+	    <%= f.submit class:"btn btn-success"%>
+	  </div>
 
+	</form>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
 
-<%= link_to 'Back', @participante.encontro %>
+<%= link_to 'Voltar', @participante.encontro, class:"btn btn-default" %>
