--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,12 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-
+  <body>  
+        <%= render 'layouts/navbar' %>       
 		  	<div class="content-box-large">
 				  <%= yield %>
 		    </div>
+        <%= render 'layouts/footer' %>
   </body>
 </html>
+
