Adicao de nome no formulario de cadastro de usuário

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   </head>
   <body>  
         <%= render 'layouts/navbar' %>       
-		  	<div class="content-box-large">
+		  	<div class="content-box-large corpo">
 				  <%= yield %>
 		    </div>
         <%= render 'layouts/footer' %>
