--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,3 +9,11 @@
     bottom: 0px;
     width: 100%;
 }
+
+.corpo{
+	padding-left: 20px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-right: 10px;
+	padding-right: 10px;
+}
