--- a/app/views/participantes/edit.html.erb
+++ b/app/views/participantes/edit.html.erb
@@ -14,7 +14,7 @@
 	  </div>
 
 	  <div class="actions">
-	    <%= f.submit class:"btn btn-success"%>
+	    <%= f.submit 'Atualizar Pagamento', class:"btn btn-success"%>
 	  </div>
 
 	</form>
