--- a/app/views/encontros/index.html.erb
+++ b/app/views/encontros/index.html.erb
@@ -38,9 +38,15 @@
         <td><%= encontro.valor %></td>
         <td><%= encontro.quant_max %></td>
         <% if policy(encontro).inscreve? %>
-          <td colspan="2">
-            <%= link_to 'Inscreva-se', new_participante_path(encontro_id: encontro) , class:"btn btn-info"%>
-          </td>
+          <% if policy(encontro).inscrito? %>
+            <td colspan="2">
+              <%= link_to 'Inscreva-se', new_participante_path(encontro_id: encontro) , class:"btn btn-info"%>
+            </td>
+          <% else %>
+           <td colspan="2">
+              <input type="button" class="btn btn-success" disabled="disabled" value="Inscrito" />
+            </td>
+          <% end %>
         <% end %>
 
         <% if policy(encontro).edita? %>
