--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,16 @@
-<h2>Forgot your password?</h2>
+<h2>Esqueceu a sua senha?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
-
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true , class:"form-control"%>
   </div>
-
+  <br/>
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Enviar instruções para redefinir a senha.", class:"btn btn-primary" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+ 
