--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,21 @@
+<div class="col-md-3"></div>
+<div class="container col-md-6">
 <h2>Cadastre-se</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :nome %><br />
     <%= f.text_field :nome, autofocus: true, class:"form-control" %>
   </div>
-
-  <div class="field">
+  <!-- ##### campos a mais para o cadastro #####-->
+  <div class="row">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -21,14 +23,17 @@
     <%= f.password_field :password, autocomplete: "off", class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Cadastre-se" %>
+  <br/>
+  <div class="row actions">
+    <%= f.submit "Cadastre-se", class:"btn btn-success" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="col-md-3"></div>
+<div class="row"></div>
