--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -11,32 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :nome %>
     <%= f.text_field :nome %>
   </div>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :data_nascimento %>
     <%= f.date_select :data_nascimento %>
   </div>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :cpf %>
     <%= f.text_field :cpf %>
   </div>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :rg %>
     <%= f.text_field :rg %>
   </div>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
 
-  <div class="actions">
+  <div class="row actions">
     <%= f.submit %>
   </div>
 <% end %>
